2007-07-13  Martin Nordholts  <martinn@svn.gnome.org>

	* app/tools/gimprectangletool.c
	(gimp_rectangle_tool_active_modifier_key): Update handle sizes and
	highlight area also when Ctrl is released.

2007-07-13  Raphaël Quinet  <raphael@gimp.org>

	* plug-ins/common/psd-load.c (load_image): safeguard to avoid
	crashes while loading corrupt PSD images.  Fixes bug #327444.

2007-07-13  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/psd-load.c: use g_printerr() for debug output.

2007-07-12  Sven Neumann  <sven@gimp.org>

	Work around Pango appending " Not-Rotated" to font names:

	* app/text/gimptext.c (gimp_text_set_property)
	* app/text/gimpfontlist.c (gimp_font_list_add_font): strip
	" Not-Rotated" from the font name.

2007-07-12  Sven Neumann  <sven@gimp.org>

	* authors.xml: added two more contributors.

2007-07-12  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/psd-load.c: don't divide by zero when loading a
	layer or mask with zero width or height. Fixes bug #456042.

2007-07-11  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/lcms.c: clarify which procedures work with RGB
	profiles and which accept profiles for other colorspaces.
	Calculate MD5 checksums of the profile data excluding the header
	and skip attempts to convert between identical profiles (bug #456017).

2007-07-11  Sven Neumann  <sven@gimp.org>

	* data/brushes/Calligraphic-Brush-*.vbr
	* data/brushes/Circle-*.vbr
	* data/brushes/Diagonal-Star-*.vbr: restored spacing values. Closes
	bug #157506 again.

2007-07-11  Sven Neumann  <sven@gimp.org>

	* plug-ins/script-fu/scripts/chrome-it.scm
	* plug-ins/script-fu/scripts/perspective-shadow.scm
	* plug-ins/script-fu/scripts/selection-round.scm
	* plug-ins/script-fu/scripts/sota-chrome-logo.scm
	* plug-ins/script-fu/scripts/swirltile.scm
	* plug-ins/script-fu/scripts/waves-anim.scm: added leading zero to
	floating point numbers.

2007-07-11  Martin Nordholts  <martinn@svn.gnome.org>
